--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-# Streamlit CGPA Calculator Requirements
-# --------------------------------------
-# This file lists all Python libraries required to run the app.
-# Install using: pip install -r requirements.txt
-
-streamlit==1.38.0
-pandas==2.2.3
-numpy==1.26.4
-plotly==5.24.1
+streamlit
+pandas
+numpy
+plotly
